--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             text-align: center;
             z-index: 10;
             position: relative;
+            margin-bottom: 100px; /* Space for audio player */
         }
 
         .welcome-message {
@@ -83,6 +84,53 @@
             backdrop-filter: blur(10px);
             border-radius: 20px;
             border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        /* Audio player styling */
+        .audio-player {
+            position: fixed;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 100;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(15px);
+            border-radius: 25px;
+            padding: 15px 25px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            min-width: 300px;
+            text-align: center;
+        }
+
+        .audio-player audio {
+            width: 100%;
+            height: 40px;
+            outline: none;
+        }
+
+        .audio-title {
+            color: white;
+            font-size: 14px;
+            margin-bottom: 8px;
+            font-weight: 500;
+            opacity: 0.9;
+        }
+
+        /* Custom audio player styling */
+        audio::-webkit-media-controls-panel {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+        }
+
+        audio::-webkit-media-controls-play-button {
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+        }
+
+        audio::-webkit-media-controls-current-time-display,
+        audio::-webkit-media-controls-time-remaining-display {
+            color: white;
         }
 
         /* Fade in with glow animation */
@@ -116,6 +164,12 @@
             .line {
                 width: 6px;
             }
+            
+            .audio-player {
+                min-width: 280px;
+                bottom: 20px;
+                padding: 12px 20px;
+            }
         }
     </style>
 </head>
@@ -145,6 +199,17 @@
         <div class="welcome-message">
             أهلاً وسهلاً بموقعي، أستاذ علاء نايلة
         </div>
+    </div>
+
+    <!-- Audio Player -->
+    <div class="audio-player">
+        <div class="audio-title"></div>
+        <audio controls>
+            <!-- Replace "your-audio-file.mp3" with your actual audio file -->
+            <source src="audio.mp3" type="audio/mpeg">
+            <source src="background-music.ogg" type="audio/ogg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
 </body>
 </html>
